--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        swift: ["5.3", "5.4", "5.5"]
+        swift: ["5.5"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: fwal/setup-swift@v1
