--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   xcode:
-    name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+    name: Xcode build on ${{ matrix.os }}
     strategy:
       matrix:
         os:
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build and Test
         run: |
-          xcodebuild test -scheme ServiceLocator -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          xcodebuild test -scheme ServiceLocator -destination "${{ matrix.destination }}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
   spm:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
