--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         os:
-          # - "ubuntu-latest"
+          - "ubuntu-latest"
           - "macos-latest"
         swift:
           - "5.5"
