Set up coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,15 @@ jobs:
       - name: Build
         run: swift build
       - name: Run tests
-        run: swift test
+        run: swift test --enable-code-coverage
+      - name: Convert Coverage
+        run: |
+          llvm-cov export \
+            -format="lcov" \
+            .build/debug/ServiceLocatorPackageTests.xctest/Contents/MacOS/ServiceLocatorPackageTests \
+            -instr-profile .build/debug/codecov/default.profdata \
+            > info.lcov
+        if: matrix.os == "macos-latest" && matrix.swift-version == "5.5"
+      - name: Post Coverage
+        uses: codecov/codecov-action@v1
+        if: matrix.os == "macos-latest" && matrix.swift-version == "5.5"
